--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["netbox"],
     "license": "MIT",
     "require": {
-        "php": "^8.1|^8.0|^7.4|^7.3|^7.2",
+        "php": ">=5.6",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.5|^7.0"
     },
