--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mkevenaar/netbox",
+    "name": "dlewis-sh/netbox",
     "description": "Netbox for PHP",
     "keywords": ["netbox"],
     "license": "MIT",
